; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngvalid.c_standard_name_from_id.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngvalid.c_standard_name_from_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i64, i64, i32)* @standard_name_from_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @standard_name_from_id(i8* %0, i64 %1, i64 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* %7, align 8
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @COL_FROM_ID(i32 %12)
  %14 = load i32, i32* %8, align 4
  %15 = call i32 @DEPTH_FROM_ID(i32 %14)
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @PALETTE_FROM_ID(i32 %16)
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @INTERLACE_FROM_ID(i32 %18)
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @WIDTH_FROM_ID(i32 %20)
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @HEIGHT_FROM_ID(i32 %22)
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @DO_INTERLACE_FROM_ID(i32 %24)
  %26 = call i64 @standard_name(i8* %9, i64 %10, i64 %11, i32 %13, i32 %15, i32 %17, i32 %19, i32 %21, i32 %23, i32 %25)
  ret i64 %26
}

declare dso_local i64 @standard_name(i8*, i64, i64, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @COL_FROM_ID(i32) #1

declare dso_local i32 @DEPTH_FROM_ID(i32) #1

declare dso_local i32 @PALETTE_FROM_ID(i32) #1

declare dso_local i32 @INTERLACE_FROM_ID(i32) #1

declare dso_local i32 @WIDTH_FROM_ID(i32) #1

declare dso_local i32 @HEIGHT_FROM_ID(i32) #1

declare dso_local i32 @DO_INTERLACE_FROM_ID(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
